updates to documentation

--- a/README.Rmd
+++ b/README.Rmd
@@ -27,7 +27,7 @@ knitr::opts_chunk$set(echo = TRUE,
 
 **eyetools** is a package that provides a set of simple tools that will facilitate common steps in the processing and analysis of eye data. It is intended for use with data from psychological experiments. The idea is to have a workflow which is aided by these functions, going from processing of the raw data, to extraction of event related data (i.e., fixations, saccades), to summarising those data at the trial level (e.g., time on areas of interest). 
 
-**Warning - still in somewhat experimental form! Please check results carefully**
+For an indepth guide to using eyetools, see the [Get Started page](https://tombeesley.github.io/eyetools/articles/eyetools.html).
 
 to install: `devtools::install_github("tombeesley/eyetools")`
 
@@ -35,274 +35,18 @@ It is free to use under the GNU General Public Licence.
 
 Available functions:
 
-| Implemented functions   | Description                                                                                           |
-|-------------------------|-------------------------------------------------------------------------------------------------------|
-| `AOI_seq()`             | Detect the sequence in which AOIs were entered in a trial                                             |
-| `AOI_time()`            | Time on AOIs; works with rectangular and circular AOIs; works with raw and fixation data              |
-| `combine_eyes()`        | Combines binocular data (i.e., average or "best eye")                                                 |
-| `compare_algorithms()`  | Provides a comparison between the dispersion and VTI fixation algorithms with correlations and plot   |
-| `conditional_transform()` | Implements a single-axis flip for specific trials to normalise data with counterbalanced designs    |
-| `fixation_dispersion()` | Dispersion algorithm for fixation detection                                                           |
-| `fixation_VTI()`        | An inverse saccade algorithm for fixation detection                                                   |
-| `hdf5_to_csv()`         | converts eyetracking data retrieved from TOBII eyetrackers to csv                                     |
-| `interpolate()`         | Interpolates data across gaps; provides a summary report of repair                                    |
-| `plot_seq()`            | provides a 2D plot of raw data in one trial. Data can be split into time bins                         |
-| `plot_spatial()`        | provides a 2D plot of raw data, fixations, saccades, and AOIs                                         |
-| `saccade_VTI()`         | Velocity threshold algorithm for saccade detection. Provides summary of velocity, start/end, duration |
-| `smoother()`            | smooths data for use in saccade algorithms                                                            |
-
-## How to use eyetools (work in progress)
-
-```{r include=FALSE}
-
-library(tidyverse)
-
-theme_set(theme_light())
-
-
-```
-### Installation
-
-You can install eyetools using the following code:
-```{r, eval=FALSE}
-if (!require(devtools)) {
-  install.packages("devtools")
-  library(devtools)
-}
-install_github("tombeesley/eyetools")
-```
-and then load it:
-```{r}
-library(eyetools)
-```
-
-### The format of raw data
-
-Data needs to be in a particular format to be compatible with the functions in eyetools. This format is 4 columns of data, with each row representing a sample. The four columns are: time, x, y, and trial. You can see an example with the built in data sets:
-```{r}
-example_raw_sac
-```
-
-**Importantly**, the data for each trial should be sequential and logical, that is, the timestamps should run continuously, without any gaps in the recording process. The eyetools package expects data to contain only data for a single participant; none of the functions handle the data for multiple participants in their present state. 
-
-### Repairing data
-
-Raw data will often contain missing samples, which we can attempt to repair. eyetools has an `interpolate()` function you can use to do this. It will produce a report of how successful the repair was in terms of the missing data before and after interpolation:
-
-```{r}
-interpolate(example_raw_sac, report = TRUE)
-
-raw_data <- interpolate(example_raw_sac) # store as new object
-```
-
-We can also apply a smoothing function (`smoother()`) over the data, which is particularly important for the analysis of saccadic velocities. 
-
-```{r}
-smooth_data <- smoother(example_raw_sac) 
-```
-
-```{r}
-library(tidyverse)
-
-r <- filter(raw_data, trial == 2)
-s <- filter(smooth_data, trial == 2)
-
-ggplot() +
-  geom_line(data = r, 
-            aes(x = time, y = y),
-            colour = "red") +
-  geom_line(data = s, 
-            aes(x = time, y = y),
-            colour = "blue")
-
-
-```
-
-### Processing fixations
-
-The function `fixation_dispersion()` is a dispersion-based algorithm for identifying fixations, based on the algorithm described in Salvucci and Goldberg (2000). Passing raw data to this will return a data frame with the fixations ordered by trial and by fixation sequence, with the averaged x and y coordinates, timestamps and duration. The "min_dur" parameter will restrict to fixations over a certain duration. The "disp_tol" parameter sets the tolerance for the dispersion of data within a fixation. Exploratory analysis of the data will be needed to find suitable values for these.
-
-```{r}
-
-raw_data_f <- filter(raw_data, trial <= 3) # get a sample of trials
-
-fixation_dispersion(raw_data_f, min_dur = 120, disp_tol = 100)
-
-```
-
-The function `fixation_VTI()` is an inverse saccade-based algorithm and offers an alternative algorithm for identifying fixations. The saccade detection is based on the "velocity threshold identification" algorithm (Salvucci and Goldberg, 2000) and then checks the dispersion of the fixations. As with `fixation_dispersion()`, passing raw data will return an ordered data frame by trial and fixation event.
-
-```{r}
-
-fixation_VTI(raw_data_f, min_dur = 120, disp_tol = 100, min_dur_sac = 20)
-
-```
-
-It is also possible to `compare_algorithms()`. This returns a plot (if desired) that shows the fixations detected (in terms of time) for each algorithm in each trial and returns by default a dataframe of the percentage of data tagged as a fixation, the number of fixations, as well as the correlation of whether timepoints are classified as a fixation. The stored object that results from `compare_algorithms()` is a list of three. Item 1 is the same printed dataframe seen below. The second object is a further list of the correlations made using `cor.test()` (of which the values are stored in object one), and the final object is the data required to reproduce the plot.
-
-```{r}
-
-comparison <- compare_algorithms(raw_data_f, min_dur = 120, disp_tol = 100, min_dur_sac = 20)
-
-```
-
-The code used to produce the plots within `compare_algorithms()` is shown below:
-
-```{r eval=FALSE}
-
-ggplot(comparison$plot,
-         aes(time, name, group = event_n)) +
-    geom_line(linewidth=10) +
-    facet_wrap(~trial, dir="v") +
-    theme_bw()
-
-```
-
-
-#### Controlling for counterbalanced data
-
-Where the experiment includes counterbalancing of predictive and non-predictive cues, currently eyetools can normalise this data for a single axis (either a horizontal or vertical flip) using the function `conditional_transform()`. As of version 0.6.0, it cannot rotate data. `conditional_transform()` takes the data that requires data to have a column that specifies the ordering of the cues, in the example data below this is handled with the variable `cue_order` that is either a 1 or 2 depending on which side of the x midline the predictive cue is presented. The flip is specified as being across the x midline and the values to flip are also specified (note: this can take multiple values).
-
-```{r}
-
-conditional_transform(example_counterbalance, flip = "x", cond_column = "cue_order", cond_values = 2)
-
-```
-
-
-### Plotting data
-
-The function `plot_spatial()` is a wrapper for a series of ggplot commands to plot both raw data and fixation summaries. 
-
-```{r fig.height=8, fig.width=8, warning=FALSE}
-library(patchwork)
-# patchwork is used here to plot adjacent figures
-
-t_raw <- dplyr::filter(example_raw_sac, trial == 9)
-
-# process fixations
-t_fix <- fixation_dispersion(t_raw, disp_tol = 100, min_dur = 150)
-
-raw_plot <- plot_spatial(raw_data = t_raw, plot_header = TRUE)
-fixation_plot <- plot_spatial(raw_data = t_raw, fix_data = t_fix)
-
-raw_plot/fixation_plot # combined plot with patchwork
-
-```
-
-### Assessing time on areas of interest
-
-The function `AOI_time()` can be used to calculate the time spent on areas of interest. Areas of interest need to be defined by the x and y centre points, and the width and height in pixels: 
-
-```{r}
-
-AOI_regions <- data.frame(matrix(nrow = 3, ncol = 4))
-colnames(AOI_regions) <- c("x", "y", "width_radius", "height")
-
-AOI_regions[1,] <- c(960, 540, 300, 300) # X, Y, W, H - square
-AOI_regions[2,] <- c(200, 540, 300, 300) # X, Y, W, H - square
-AOI_regions[3,] <- c(1720, 540, 300, 300) # X, Y, W, H - square
-
-```
-
-`AOI_time()` uses the fixation data as input to the function. In this example we are finding the time spent in 3 rectangular regions across the first 10 trials:
-
-```{r}
-
-t_raw <- filter(example_raw_sac, between(trial,1,10))
-
-# process fixations
-t_fix <- fixation_dispersion(t_raw, disp_tol = 100, min_dur = 150)
-
-AOI_time(t_fix, AOIs = AOI_regions)
-
-```
-
-We can include the AOIs within our `plot_spatial()`:
-
-```{r}
-
-t_raw <- filter(example_raw_sac, trial == 9) # single trial for plotting purposes
-
-# process fixations
-t_fix <- fixation_dispersion(t_raw, disp_tol = 100, min_dur = 150)
-
-plot_spatial(raw_data = t_raw, fix_data = t_fix, AOIs = AOI_regions)
-
-```
-
-We can also define AOIs as circles by specifying the radius in the 3rd column and setting the 4th column to NA:
-
-```{r}
-
-AOI_regions <- data.frame(matrix(nrow = 3, ncol = 4))
-colnames(AOI_regions) <- c("x", "y", "width_radius", "height")
-
-AOI_regions[1,] <- c(960, 540, 150, NA) # X, Y, R - circle
-AOI_regions[2,] <- c(200, 540, 300, 300) # X, Y, W, H - square
-AOI_regions[3,] <- c(1720, 540, 300, 300) # X, Y, W, H - square
-
-t_raw <- filter(example_raw_sac, between(trial,1,10))
-
-# process fixations
-t_fix <- fixation_dispersion(t_raw, disp_tol = 100, min_dur = 150)
-
-plot_spatial(raw_data = t_raw, fix_data = t_fix, AOIs = AOI_regions)
-
-```
-
-Circular AOIs are also handled by AOI_time and will produce different results to comparable rectangular AOIs. Here fixation 5 falls outside of the circular AOI, but within the region of the rectangular AOI:
-
-```{r}
-
-AOI_regions <- data.frame(matrix(nrow = 2, ncol = 4))
-colnames(AOI_regions) <- c("x", "y", "width_radius", "height")
-
-AOI_regions[1,] <- c(960, 540, 150, NA) # X, Y, R - circle in centre
-AOI_regions[2,] <- c(960, 540, 300, 300) # X, Y, W, H - square in centre
-
-t_raw <- filter(example_raw_sac, trial == 13)
-
-# process fixations
-t_fix <- fixation_dispersion(t_raw, disp_tol = 100, min_dur = 150)
-
-plot_spatial(raw_data = t_raw, fix_data = t_fix, AOIs = AOI_regions)
-
-AOI_time(t_fix, AOIs = AOI_regions)
-
-
-```
-
-### Processing saccades
-
-The function `saccade_VTI()` provides a means of processing the data for saccades, based on a "velocity threshold identification" algorithm, as described in Salvucci and Goldberg (2000). As described above, it is wise to use the `smoother()` function on the data first. The sample rate can be set if known, or can be approximated using the timestamps in the data. The threshold determines the degrees of visual angle per second needed to indicate the presence of a saccadic eye-movement. 
-
-```{r}
-
-t_raw <- filter(example_raw_sac, between(trial,1,10))
-
-t_smooth <- smoother(t_raw)
-
-saccade_VTI(t_smooth, sample_rate = 300)
-
-
-
-```
-
-Saccadic eye movements can be plotted alongside other data using the `plot_spatial()` function:
-
-```{r}
-
-t_smooth <- filter(t_smooth, trial == 8)
-
-t_fix <- fixation_dispersion(t_smooth, disp_tol = 100, min_dur = 150)
-
-t_sac <- saccade_VTI(t_smooth, sample_rate = 300, threshold = 100)
-
-plot_spatial(raw_data = t_smooth, fix_data = t_fix, sac_data = t_sac)
-
-```
-
-
-
-
+| Implemented functions     | Description                                                                                          |
+|---------------------------|------------------------------------------------------------------------------------------------------|
+| `AOI_seq()`               | Detect the sequence in which AOIs were entered in a trial                                            |
+| `AOI_time()`              | Time on AOIs; works with rectangular and circular AOIs; works with raw and fixation data             |
+| `combine_eyes()`          | Combines binocular data (i.e., average or "best eye")                                                |
+| `compare_algorithms()`    | Provides a comparison between the dispersion and VTI fixation algorithms with correlations and plot  |
+| `conditional_transform()` | Implements a single-axis flip for specific trials to normalise data with counterbalanced designs     |
+| `fixation_dispersion()`   | Dispersion algorithm for fixation detection                                                          |
+| `fixation_VTI()`          | An inverse saccade algorithm for fixation detection                                                  |
+| `hdf5_to_csv()`           | converts eyetracking data retrieved from TOBII eyetrackers to csv                                    |
+| `interpolate()`           | Interpolates data across gaps; provides a summary report of repair                                   |
+| `plot_seq()`              | provides a 2D plot of raw data in one trial. Data can be split into time bins                        |
+| `plot_spatial()`          | provides a 2D plot of raw data, fixations, saccades, and AOIs                                        |
+| `saccade_VTI()`           | Velocity threshold algorithm for saccade detection. Provides summary of velocity, location, duration |
+| `smoother()`              | smooths data for use in saccade algorithms                                                           |
