--- a/vignettes/articles/Animating-eyetools-data.Rmd
+++ b/vignettes/articles/Animating-eyetools-data.Rmd
@@ -34,8 +34,6 @@ data_smooth <- smoother(data, span = .02, participant_ID = "pNum")
 This animation takes raw data (of a single trial), transforms it into a larger dataset with plot-specific parameters, and then provides an animation of the participant's gaze. The lag feature highlights the path taken and slowly fades to allow more data to be presented
 
 ```{r, warning=FALSE}
-
-
 data_plot1 <- data_smooth |> 
   filter(pNum == "118", trial == "1") |> # take a single participant and trial
   mutate(id = seq(1, n()), # add an ID column to original dataset,
@@ -73,15 +71,21 @@ plot_animate <- data_plot1 |>
   scale_size_identity() +
   scale_alpha_identity() +
   lims(x = c(0, 1920), y = c(0, 1080))
+```
 
+
+```{r, warning=FALSE, eval=FALSE}
 animate(plot_animate,
         duration =  round(max(data_plot1$time)/1000),
         start_pause = 5)
 
 ## To save an animation
-#anim_save("point_lag.gif", plot_animate, height = 1080, width = 1920, duration = round(max(data_2$time)/1000),
+#anim_save("figures/point_lag.gif", plot_animate, height = 1080, width = 1920, duration = round(max(data_plot1$time)/1000),
 #          end_pause = 5)
 ```
+
+[Graphic showing the raw eye gaze data imposed over a sample stimuli image.](figures/point_lag.gif)
+
 
 ## Plotting raw and smoothed data
 
@@ -109,12 +113,23 @@ plot_animate_smooth <- data_both |>
   lims(x = c(0, 1920), y = c(0, 1080)) +
   scale_alpha_identity() +
   transition_components(time)
+```
 
+
+```{r, eval=FALSE}
 animate(plot_animate_smooth,
         duration =  round(max(data_both$time)/1000),
         start_pause = 5)
 
 ```
+
+```{r, include=FALSE}
+# To save an animation
+anim_save("figures/raw_smooth_single.gif", plot_animate_smooth, height = 1080, width = 1920, duration = round(max(data_both$time)/1000),
+          end_pause = 5)
+```
+
+[Image showing single timepoint difference between raw and smoothed data](figures/raw_smooth_single.gif)
 
 ### Combining the smooth plot with the lag plot
 
@@ -161,11 +176,22 @@ plot_animate3 <- data_plot3 |>
   scale_size_identity() +
   scale_alpha_identity() +
   lims(x = c(0, 1920), y = c(0, 1080))
+```
 
+
+```{r, eval=FALSE}
 animate(plot_animate3,
         duration = round(max(data_plot3$time)/1000),
         start_pause = 5)
 ```
+
+```{r, include=FALSE}
+# To save an animation
+anim_save("figures/raw_smooth_lag.gif", plot_animate3, height = 1080, width = 1920, duration = round(max(data_both$time)/1000),
+          end_pause = 5)
+```
+
+[Image showing lagged timepoint difference between raw and smoothed data](figures/raw_smooth_lag.gif)
 
 ## Plotting AOI entries over raw data
 
@@ -198,7 +224,7 @@ data_plot4 <- data_smooth |>
 
 
 ```{r}
-plot_animate <- data_plot4 |>
+plot_animate_4 <- data_plot4 |>
   ggplot(aes(x = x, y = y,
              colour = in_AOI
              )) +
@@ -216,10 +242,21 @@ plot_animate <- data_plot4 |>
       #          fill = "blue",
       #          alpha = .1) +
   transition_components(time)
+```
 
-animate(plot_animate, 
+
+```{r, eval=FALSE}
+animate(plot_animate_4, 
         duration = round(max(data_plot4$time)/1000))
 ```
+
+```{r, include=FALSE}
+# To save an animation
+anim_save("figures/AOI_entry.gif", plot_animate_4, height = 1080, width = 1920, duration = round(max(data_plot4$time)/1000),
+          end_pause = 5)
+```
+
+[Image showing lagged timepoint difference between raw and smoothed data](figures/AOI_entry.gif)
 
 ## Plotting time spent in Areas of Interest over time
 
@@ -232,7 +269,7 @@ data_growth <- data_smooth |>
                               between(y, HCL_AOIs$y[2] - HCL_AOIs$height[2]/2, HCL_AOIs$y[2] + HCL_AOIs$height[2]/2) ~ "AOI_2",
                             between(x, HCL_AOIs$x[3] - HCL_AOIs$width_radius[3]/2, HCL_AOIs$x[3] + HCL_AOIs$width_radius[3]/2) & 
                               between(y, HCL_AOIs$y[3] - HCL_AOIs$height[3]/2, HCL_AOIs$y[3] + HCL_AOIs$height[3]/2) ~ "AOI_3",
-                            .default = "empty")) |> 
+                            .default = "none")) |> 
   select(-x, -y)
 
 
@@ -250,7 +287,7 @@ data_growth <- data_growth |>
   mutate(prop = time_diff/time)
 
 ####
-data_growth |> 
+growth_all <- data_growth |> 
   ggplot(aes(time, prop, colour = in_AOI, group = in_AOI)) +
   scale_colour_discrete() +
   geom_line() +
@@ -259,12 +296,25 @@ data_growth |>
 
 ```
 
+```{r, eval=FALSE}
+animate(growth_all, 
+        duration = round(max(data_growth$time)/1000))
+```
+
+```{r, include=FALSE}
+# To save an animation
+anim_save("figures/data_growth_all.gif", growth_all, height = 1080, width = 1920, duration = round(max(data_growth$time)/1000),
+          end_pause = 5)
+```
+
+[Image showing the proportion of time spent in an AOI over time](figures/data_growth_all.gif)
+
 ### Or just predictive and non-predictive cues
 
 Done by adding a single filter in the in_AOI column
 
 ```{r}
-data_growth <- data_smooth |> 
+data_growth_partial <- data_smooth |> 
   filter(pNum == 118, trial == 1) |> 
   mutate(in_AOI = case_when(between(x, HCL_AOIs$x[1] - HCL_AOIs$width_radius[1]/2, HCL_AOIs$x[1] + HCL_AOIs$width_radius[1]/2) & 
                               between(y, HCL_AOIs$y[1] - HCL_AOIs$height[1]/2, HCL_AOIs$y[1] + HCL_AOIs$height[1]/2) ~ "AOI_1",
@@ -276,7 +326,7 @@ data_growth <- data_smooth |>
   select(-x, -y)
 
 
-data_growth <- data_growth |> 
+data_growth_partial <- data_growth_partial |> 
   filter(in_AOI %in% c("AOI_1", "AOI_2")) |> #only real difference
   mutate(time_diff = c(0, diff(time))) |> 
   group_by(in_AOI) |> 
@@ -290,7 +340,7 @@ data_growth <- data_growth |>
   mutate(prop = time_diff/time)
 
 ####
-data_growth |> 
+growth_partial <- data_growth_partial |> 
   ggplot(aes(time, prop, colour = in_AOI, group = in_AOI)) +
   scale_colour_discrete() +
   geom_line() +
@@ -298,3 +348,16 @@ data_growth |>
   transition_reveal(time)
 
 ```
+
+```{r, eval=FALSE}
+animate(growth_partial, 
+        duration = round(max(data_growth$time)/1000))
+```
+
+```{r, include=FALSE}
+# To save an animation
+anim_save("figures/data_growth_partial.gif", growth_partial, height = 1080, width = 1920, duration = round(max(data_growth$time)/1000),
+          end_pause = 5)
+```
+
+[Image showing the proportion of time spent in an AOI over time](figures/data_growth_partial.gif)
